syntax = "proto3";

package appointment;

option go_package = "server/proto;appointment";

service AppointmentService {
  rpc CreateAppointment (AppointmentCreate) returns (AppointmentID);
  rpc RequestAppointment (AppointmentRequest) returns (AppointmentResponse);
  rpc DecideAppointment (AppointmentID) returns (AppointmentData);
  rpc DeleteAppointment (AppointmentID) returns (Status);
  rpc GetAppointment (AppointmentID) returns (AppointmentData);
  rpc GetAppointmentsOfUser (UserID) returns (AppointmentsOfUser);
}

message Status{
  string status = 1;
  string message = 2;
}

message UserID {
  string uid = 1;
}

message AppointmentID {
  string appointmentid = 1;
}

message AppointmentCreate {
  string uid = 1;
  string doctorid = 2;
  string start = 3;
  string end = 4;
  double cost = 5;
  string animalid = 6;
  string reason = 7;
}

message AppointmentData {
  string appointmentid = 1;
  string uid = 2;
  string doctorid = 3;
  string start = 4;
  string end = 5;
  double cost = 6;
  string animalid = 7;
  string reason = 8;
}

message AppointmentsOfUser {
  repeated Appointment appointments = 1;
}

message AppointmentRequest {
  string requestid = 1;
  string uid = 2;
  string start = 3;
  string end = 4;
  string animalid = 5;
  string reason = 6;
}

message AppointmentResponse {
  string uid = 1;
  string start = 2;
  string end = 3;
  double cost = 4;
}

message Appointment {
  string uid = 1;
  string start = 2;
  string end = 3;
}